; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_hbffmpeg.c_hb_colr_mat_hb_to_ff.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_hbffmpeg.c_hb_colr_mat_hb_to_ff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVCOL_SPC_RGB = common dso_local global i32 0, align 4
@AVCOL_SPC_BT709 = common dso_local global i32 0, align 4
@AVCOL_SPC_FCC = common dso_local global i32 0, align 4
@AVCOL_SPC_BT470BG = common dso_local global i32 0, align 4
@AVCOL_SPC_SMPTE170M = common dso_local global i32 0, align 4
@AVCOL_SPC_SMPTE240M = common dso_local global i32 0, align 4
@AVCOL_SPC_YCGCO = common dso_local global i32 0, align 4
@AVCOL_SPC_BT2020_NCL = common dso_local global i32 0, align 4
@AVCOL_SPC_BT2020_CL = common dso_local global i32 0, align 4
@AVCOL_SPC_SMPTE2085 = common dso_local global i32 0, align 4
@AVCOL_SPC_CHROMA_DERIVED_NCL = common dso_local global i32 0, align 4
@AVCOL_SPC_CHROMA_DERIVED_CL = common dso_local global i32 0, align 4
@AVCOL_SPC_ICTCP = common dso_local global i32 0, align 4
@AVCOL_SPC_UNSPECIFIED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hb_colr_mat_hb_to_ff(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %31 [
    i32 133, label %5
    i32 138, label %7
    i32 135, label %9
    i32 139, label %11
    i32 132, label %13
    i32 130, label %15
    i32 128, label %17
    i32 140, label %19
    i32 141, label %21
    i32 131, label %23
    i32 136, label %25
    i32 137, label %27
    i32 134, label %29
    i32 129, label %32
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @AVCOL_SPC_RGB, align 4
  store i32 %6, i32* %2, align 4
  br label %34

7:                                                ; preds = %1
  %8 = load i32, i32* @AVCOL_SPC_BT709, align 4
  store i32 %8, i32* %2, align 4
  br label %34

9:                                                ; preds = %1
  %10 = load i32, i32* @AVCOL_SPC_FCC, align 4
  store i32 %10, i32* %2, align 4
  br label %34

11:                                               ; preds = %1
  %12 = load i32, i32* @AVCOL_SPC_BT470BG, align 4
  store i32 %12, i32* %2, align 4
  br label %34

13:                                               ; preds = %1
  %14 = load i32, i32* @AVCOL_SPC_SMPTE170M, align 4
  store i32 %14, i32* %2, align 4
  br label %34

15:                                               ; preds = %1
  %16 = load i32, i32* @AVCOL_SPC_SMPTE240M, align 4
  store i32 %16, i32* %2, align 4
  br label %34

17:                                               ; preds = %1
  %18 = load i32, i32* @AVCOL_SPC_YCGCO, align 4
  store i32 %18, i32* %2, align 4
  br label %34

19:                                               ; preds = %1
  %20 = load i32, i32* @AVCOL_SPC_BT2020_NCL, align 4
  store i32 %20, i32* %2, align 4
  br label %34

21:                                               ; preds = %1
  %22 = load i32, i32* @AVCOL_SPC_BT2020_CL, align 4
  store i32 %22, i32* %2, align 4
  br label %34

23:                                               ; preds = %1
  %24 = load i32, i32* @AVCOL_SPC_SMPTE2085, align 4
  store i32 %24, i32* %2, align 4
  br label %34

25:                                               ; preds = %1
  %26 = load i32, i32* @AVCOL_SPC_CHROMA_DERIVED_NCL, align 4
  store i32 %26, i32* %2, align 4
  br label %34

27:                                               ; preds = %1
  %28 = load i32, i32* @AVCOL_SPC_CHROMA_DERIVED_CL, align 4
  store i32 %28, i32* %2, align 4
  br label %34

29:                                               ; preds = %1
  %30 = load i32, i32* @AVCOL_SPC_ICTCP, align 4
  store i32 %30, i32* %2, align 4
  br label %34

31:                                               ; preds = %1
  br label %32

32:                                               ; preds = %1, %31
  %33 = load i32, i32* @AVCOL_SPC_UNSPECIFIED, align 4
  store i32 %33, i32* %2, align 4
  br label %34

34:                                               ; preds = %32, %29, %27, %25, %23, %21, %19, %17, %15, %13, %11, %9, %7, %5
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
